# OOP

./: CMakeLists.txt
#0_prac/: 11_constructor.cpp  prac.cpp
#1_designPattern/: 0_note.cpp  10_Fly_Weight.cpp  1_1_TemplateMethod.cpp  1_2_Decorator.cpp  1_Singleton.cpp  2_FactoryMethod.cpp  3_Strategy.cpp  4_Observer.cpp  4_ObserverCode.cpp  5_Adapter.cpp  6_Bridge.cpp  7_AbstractFactory.cpp  8_Builder.cpp
#2_Inheritance_VirtualFunc/: 0_note(cast).cpp  0_note.cpp  10_reference_for_upcasting.cpp  11_pure_virtual_func.cpp  12_dynmaic_downcasting.cpp  13_RTTI.cpp  1_InheritanceTypeExample.cpp  2_Inheritance_Constructor.cpp  3_order_of_construction.cpp  4_order_of_Destructor.cpp  5_hiding_Base_class_member.cpp  6_upcasting.cpp  7_downcasting.cpp  8_Example_not_virtual.cpp  8_Example_virtual.cpp  9_virtual_destructor.cpp
#3_multipleInheritance_STL/: 0_note(STL).cpp  0_note.cpp  10_set.cpp  11_Deallocation.cpp  12_unique_ptr.cpp  13_shared_ptr.cpp  1_Ambiguity_Resolution.cpp  2_Dreaded_Diamond_Inheritance.cpp  3_Virtual_Inheritance.cpp  4_File_IO.cpp  6_STL.cpp  7_vector.cpp  8_list.cpp  9_deque.cpp
#4_Template/: 0_note.cpp  10_Tailing_Return_Type.cpp  11_0_Problem.cpp  11_1_solveBy_constexpr_func.cpp  11_2_solveBy_Template.cpp  12_.cpp  1_class_Template.cpp  2_auto.cpp  3_constexpr.cpp  4_func_template.cpp  5_Specialization.cpp  6_variadic_func.cpp  7_variadic_func2.cpp  8_fold.cpp  9_Functor.cpp
#5_weekly/week10/: 10_1.cpp  10_2.cpp  10_3.cpp  10_4.cpp  10_5.cpp
#5_weekly/week11/: 11_1.cpp  11_2.cpp  11_3.cpp
#5_weekly/week12/: 12_1.cpp  12_2.cpp  12_3.cpp  12_3_1.cpp  12_4.cpp  12_5.cpp  12_6.cpp
#5_weekly/week13/: 13_1.cpp  13_2.cpp  13_3.cpp  13_4.cpp
#5_weekly/week14/: 14_0.cpp  14_1.cpp  14_1_2.cpp  14_2.cpp  14_3.cpp  14_4.cpp  14_5.cpp
#5_weekly/week9/: 9_2.cpp  9_3.cpp  9_3_1.cpp  9_4.cpp  9_4_1.cpp  9_5.cpp  9_5_1.cpp  9_6.cpp  9_7.cpp
