cmake_minimum_required(VERSION 3.29)
project(OOP)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP
        "#0_prac/prac.cpp"
        "#0_prac/1_namespace.cpp"
        "#0_prac/2_pointer.cpp"
        "#0_prac/3_reference.cpp"
        "#0_prac/4_r_l_value.cpp"
        "#0_prac/5_ref_func.cpp"
        "#0_prac/6_ref_func2.cpp"
        "#0_prac/7_class_prac.cpp"
        "#0_prac/9_key_friend.cpp"
        "#0_prac/10_fun_overloading.cpp"
        "#0_prac/11_constructor.cpp"
        "#0_prac/12_copy_constructor_base.cpp"
        "#0_prac/13_shallow_copy.cpp"
        "#0_prac/15_move_constructor.cpp"
        "#0_prac/16_initializer_list.cpp"
        "#0_prac/17_destructor.cpp"
        "#0_prac/18_copy_only.cpp"
        "#0_prac/19_copywithmove.cpp"
        "#0_prac/14_deep_copy.cpp"
        "#0_prac/21_key_static.cpp"
        "#0_prac/22_key_this.cpp"
        "#0_prac/8_key_const.cpp"
        "#0_prac/23_key_mutable.cpp"
        "#0_prac/24_key_explicit.cpp"
        "#0_prac/25_operator_overloading.cpp"
        "#0_prac/26_operator_overloading2.cpp"
        "#0_prac/refsdfsf.cpp"
        "#0_prac/20_new_delete.cpp"
        "#0_prac/27_exception.cpp"
        "#0_prac/28_inheritance.cpp"
        "#5_weekly/week9/9_1.cpp"
        "#1_designPattern/1_Singleton.cpp"
        "#1_designPattern/2_FactoryMethod.cpp"
        "#1_designPattern/3_Strategy.cpp"
        "#1_designPattern/4_Observer.cpp"
        "#1_designPattern/5_Adapter.cpp"
        "#1_designPattern/6_Bridge.cpp"
        "#1_designPattern/7_AbstractFactory.cpp"
        "#1_designPattern/1_1_TemplateMethod.cpp"
        "#1_designPattern/1_2_Decorator.cpp"
        "#2_Inheritance_VirtualFunc/1_InheritanceTypeExample.cpp"
        "#2_Inheritance_VirtualFunc/2_Inheritance_Constructor.cpp"
        "#2_Inheritance_VirtualFunc/3_order_of_construction.cpp"
        "#2_Inheritance_VirtualFunc/4_order_of_Destructor.cpp"
        "#2_Inheritance_VirtualFunc/5_hiding_Base_class_member.cpp"
        "#2_Inheritance_VirtualFunc/6_upcasting.cpp"
        "#2_Inheritance_VirtualFunc/7_downcasting.cpp"
        "#2_Inheritance_VirtualFunc/8_Example_not_virtual.cpp"
        "#2_Inheritance_VirtualFunc/8_Example_virtual.cpp"
        "#2_Inheritance_VirtualFunc/9_virtual_destructor.cpp"
        "#2_Inheritance_VirtualFunc/10_reference_for_upcasting.cpp"
        "#2_Inheritance_VirtualFunc/11_pure_virtual_func.cpp"
        "#2_Inheritance_VirtualFunc/12_dynmaic_downcasting.cpp"
        "#2_Inheritance_VirtualFunc/13_RTTI.cpp"
        "#2_Inheritance_VirtualFunc/0_note(cast).cpp"
        "#3_multipleInheritance_STL/0_note.cpp"
        "#3_multipleInheritance_STL/1_Ambiguity_Resolution.cpp"
        "#3_multipleInheritance_STL/2_Dreaded_Diamond_Inheritance.cpp"
        "#3_multipleInheritance_STL/3_Virtual_Inheritance.cpp"
        "#3_multipleInheritance_STL/4_File_IO.cpp"
        "#3_multipleInheritance_STL/5_operator_overloading.cpp"
        "#3_multipleInheritance_STL/6_STL.cpp"
        "#3_multipleInheritance_STL/7_vector.cpp"
        "#3_multipleInheritance_STL/8_list.cpp"
        "#3_multipleInheritance_STL/9_deque.cpp"
        "#3_multipleInheritance_STL/10_set.cpp"
        "#3_multipleInheritance_STL/11_Deallocation.cpp"
        "#3_multipleInheritance_STL/12_unique_ptr.cpp"
        "#3_multipleInheritance_STL/13_shared_ptr.cpp"
        "#4_Template/0_note.cpp"
        "#4_Template/1_class_Template.cpp"
        "#4_Template/2_auto.cpp"
        "#4_Template/3_constexpr.cpp"
        "#4_Template/4_func_template.cpp"
        "#4_Template/5_Specialization.cpp"
        "#4_Template/6_variadic_func.cpp"
        "#4_Template/7_variadic_func2.cpp"
        "#4_Template/8_fold.cpp"
        "#4_Template/9_Functor.cpp"
        "#4_Template/10_Tailing_Return_Type.cpp"
        "#4_Template/11_0_Problem.cpp"
        "#4_Template/11_1_solveBy_constexpr_func.cpp"
        "#4_Template/11_2_solveBy_Template.cpp"
        "#4_Template/12_.cpp"
        "#1_designPattern/8_Builder.cpp"
        "#1_designPattern/10_Fly_Weight.cpp"
        "#1_designPattern/9_MVC.cpp"
        "#1_designPattern/4_ObserverCode.cpp"
        "#5_weekly/week9/9_2.cpp"
        "#5_weekly/week9/9_3.cpp"
        "#5_weekly/week9/9_3_1.cpp"
        "#5_weekly/week9/9_5.cpp"
        "#5_weekly/week9/9_4.cpp"
        "#5_weekly/week9/9_4_1.cpp"
        "#5_weekly/week9/9_5_1.cpp"
        "#5_weekly/week9/9_6.cpp"
        "#5_weekly/week9/9_7.cpp"
        "#5_weekly/week10/10_1.cpp"
        "#5_weekly/week10/10_2.cpp"
        "#5_weekly/week10/10_3.cpp"
        "#5_weekly/week10/10_4.cpp"
        "#5_weekly/week10/10_5.cpp"
        "#5_weekly/week11/11_1.cpp"
        "#5_weekly/week12/12_1.cpp"
        "#5_weekly/week12/12_2.cpp"
        "#5_weekly/week12/12_3.cpp"
        "#5_weekly/week12/12_3_1.cpp"
        "#5_weekly/week12/12_4.cpp"
        "#5_weekly/week12/12_6.cpp"
        "#5_weekly/week12/12_5.cpp"
        "#5_weekly/week13/13_1.cpp"
        "#5_weekly/week13/13_2.cpp"
        "#5_weekly/week13/13_3.cpp"
        "#5_weekly/week14/14_1.cpp"
        "#1_designPattern/0_note.cpp"
        "#2_Inheritance_VirtualFunc/0_note.cpp"
        "#3_multipleInheritance_STL/0_note(STL).cpp"
        "#5_weekly/week14/14_5.cpp"
        "#5_weekly/week14/14_2.cpp"
        "#5_weekly/week14/14_3.cpp"
        "#5_weekly/week14/14_4.cpp"
        "#5_weekly/week14/14_0.cpp"
        "#5_weekly/week14/14_1_2.cpp"
        "#5_weekly/week13/13_4.cpp"
        "#5_weekly/week11/11_2.cpp"
        "#5_weekly/week11/11_3.cpp"
)
